--- a/style.css
+++ b/style.css
@@ -1,139 +1,201 @@
-body{
-	font: 14px 'Helvetica Neue','Helvetica','Arial','sans-serif';
-	background-color: #F5F5F5;
-	color: #4d4d4d;
-	-webkit-font-smoothing: antialiased;
-	-moz-font-smoothing: antialiased;
-	font-smoothing: antialiased;
-	font-weight: 300;
-}
+	/*---------------------LAYOUT--------------------------------------------*/
 
-h1{
-	color:rgba(175, 47, 47, 0.15);
-	text-align: center;
-	font-size: 72px;
-}
+		*>.Grid {
+			-moz-box-sizing: border-box;
+			-webkit-box-sizing: border-box;
+			box-sizing: border-box;
+			display: table;
+			width: 100%;
+			height: 100%;
+		}
 
-ul{
-	background-color:white;
-	list-style: none;
-	border-radius: 5px;
-	color:#4D4D4D;
-}
+		.Grid>.Row {
+			display: table-row;
+			height: 1px;
+		}
+		.Grid>.Row.Expand {
+			height: auto;
+		}
+		.Grid>.Column, .Grid>.Row>.Column {
+			display: table-cell;
+			width: 1px;
+		}
+		.Grid>.Column.Expand, .Grid>.Row>.Column.Expand {
+			width: auto;
+		}
+/*----------------------------------------------------------------------*/
 
-.controls{
-	display: none;
-	color:#777;
-	margin-bottom: 20px;
-}
 
-.inputFields{
-	position: relative;
-	width:340px;
-	margin: 0px auto 20px;
-}
 
-#checkAll{
-	position: absolute;
-	left:14px;
-	top:17px;
-	background-color: red;
-	text-align: center;
-}
+/*--------------------------CONTENT------------------------------------*/
+		html, body {
+			height: 100%;
+			margin: 0em;
+		}	
 
-#newTask{
-	font-size: 20px;
-	width: 300px;
-	height:50px;
-	padding-left: 40px;
-	display: block;
-	border-radius: 5px;
-	border:none;
-}
+		body{
+			font-family: "Open Sans","Helvetica", Arial, sans-serif;
+		}
+		body>.Grid {
+			background: #FAFAFA;
+			margin: 0em;
+			padding: 0em;
+			table-layout: fixed;
+		}
+		
+		#Header {
+			background: #DB4C3F;
+			height: 50pt;
+		}
+		#Main {
+			background: #FAFAFA;
+		}
+		#Footer {
+			text-align: center;
+			color: #BFBFBF;
+			font-size: 10px;
+		}
 
-.application{
-	width:320px;
-	display: block;
-	margin: 0px auto;
+		#RSide {
+			background: #FAFAFA;
+			width: 150px;
+		}
+		#Content {
+			background: white;
+		}
+		#Menu {
+			background: #FAFAFA;
+			width:150pt;
+		}
+		
+		p, h1, h2, h3 {
+			margin: 10pt;
+		}
 
-}
 
-li{
+		#TimeFilter,
+		#GroupFilter,
+		#Controls{
+			list-style: none;
+			margin-bottom: 2px;
+			padding: 10px;
+		}
 
-	font-size: 32px;
-	position: relative;
-	height:40px;
-}
+		#TimeFilter li,
+		#GroupFilter li,
+		#Controls li{
+			margin-bottom: 2px;
+			padding: 10px;
+			height: 20px;
+			font-size: 14px;
+			color: #303333;
+		}
+/*----------------------------------------------------------------------*/
 
-li input{
-	position: absolute;
-	top:12px;
-	left:-30px;
-}
 
-.completed{
-	text-decoration: line-through;
-	color:gray;
-}
 
-.deleteButton{
-	color:#AF5B5E;
-	font-weight:bold;
-	padding: 0px;
-	border:none;
-	background-image:none;
-	background-color:white;
-	position: absolute;
-	top:12px;
-	right:17px;
-	display: none;
-}
+		#ToDoList{
+			list-style: none;
+		}
 
-li:hover button 
-{
-	display: inline;
-}
+		.controls{
+			display: none;
+			color:#777;
+			margin-bottom: 20px;
+		}
 
-.footer{
-	width:320px;
-	display: block;
-	margin: 0px auto;
-	padding-top: 20px;
-}
+		.inputFields{
+			position: relative;
+			margin: 0px auto 20px;
 
-div[name="buttons"]{
-	margin-top: 20px;
-}
+		}
 
-button{
-	border-radius: 3px;
-	border:none;
-}
+		#checkAll{
+			position: absolute;
+			left:14px;
+			top:17px;
+			background-color: red;
+			text-align: center;
+		}
 
-.info{
-	margin-top:30px; 
-	color: #BFBFBF;
-	font-size: 10px;
-	text-align: center;
-}
+		#newTask{
+			font-size: 20px;
+			width:90%;
+			height:50px;
+			padding-left: 40px;
+			display: block;
+			border-radius: 5px;
+			border: 1px solid grey;
+		}
 
-li input[type="text"]{
-	font-size: 20px;
-    width: 310px;
-    height: 36px;
-    border-radius: 5px;
-    border: 2px solid lightblue;;
-    margin:-11px;
-    padding-left:10px;
-	display:none;
-}
-li.editMode input{
-	display: inline-block;
-}
+		button{
+			border-radius: 3px;
+			border:none;
+		}
 
-li.editMode label,
-li.editMode button,
-li.editMode input[type="checkbox"] 
-{
-	display: none;
-}
+		#ToDoList li{
+			font-size: 20px;
+			position: relative;
+			height:30px;
+			padding: 7px;
+		}
+
+		#ToDoList li input{
+			position: absolute;
+			top:12px;
+			left:-30px;
+		}
+
+		.completed{
+			text-decoration: line-through;
+			color:gray;
+		}
+
+		.deleteButton{
+			color:#AF5B5E;
+			font-weight:bold;
+			padding: 0px;
+			border:none;
+			background-image:none;
+			background-color:white;
+			position: absolute;
+			top:12px;
+			right:17px;
+			display: none;
+		}
+
+		#ToDoList li:hover button 
+		{
+			display: inline;
+		}
+
+		div[name="buttons"]{
+			margin-top: 20px;
+		}
+
+		#ToDoList li input[type="text"]{
+			font-size: 20px;
+			width: 310px;
+			height: 36px;
+			border-radius: 5px;
+			border: 2px solid lightblue;;
+			margin:-11px;
+			padding-left:10px;
+			display:none;
+		}
+		#ToDoList li.editMode input{
+			display: inline-block;
+		}
+
+		#ToDoList li.editMode label,
+		#ToDoList li.editMode button,
+		#ToDoList li.editMode input[type="checkbox"] 
+		{
+			display: none;
+		}
+
+		h1{
+			padding-left: 15px; 
+		}
+
+
