--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8" />
 <title>To Do List login</title>
 </head>
 <body>
+	<h2>LOGIN</h2>
 	<form action="/" method="post">
-		Login: <input type="text" name="login"/> <br/> 
-		Password: <input type="text" name="password"/> <br/> 
-		<input type="submit" value="Submit" />
+		Login: <input type="text" name="login" /> <br /> Password: <input
+			type="text" name="password" /> <br /> 
+			<input type="submit" value="Sigin" /> 
+	</form>
+	<br />
+	<br />
+	<h2>REGISTRATION</h2>
+	<form action="/registration" method="post">
+		Login: <input type="text" name="login" /> <br /> Password: <input
+			type="text" name="password" /> <br /> <input type="submit"
+			value="SignUp" />
 	</form>
 </body>
 </html>
