--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,12 @@
 <body onLoad="uncheck(); addListener('Active');">
 	<div class="Grid">
 		<div id="Header" class="Row">
-			<h1>Your's ToDo List</h1>
+			<div id="Name">
+				<h1>Your's ToDo List</h1>
+			</div>
+			<div id="Signout">
+				<a href="login">Sign out</a>
+			</div>
 		</div>
 		<div id="Main" class="Row Expand">
 			<div id="Inside" class="Grid">
