--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,22 +2,33 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>To Do List login</title>
+<link rel="stylesheet" href="css/style_login.css" />
+<title>To Do List</title>
 </head>
 <body>
-	<h2>LOGIN</h2>
-	<form action="/" method="post">
-		Login: <input type="text" name="login" /> <br /> Password: <input
-			type="text" name="password" /> <br /> 
-			<input type="submit" value="Sigin" /> 
-	</form>
-	<br />
-	<br />
-	<h2>REGISTRATION</h2>
-	<form action="/registration" method="post">
-		Login: <input type="text" name="login" /> <br /> Password: <input
-			type="text" name="password" /> <br /> <input type="submit"
-			value="SignUp" />
-	</form>
+	<div id="form_block">
+		<div id="Signin">
+			<h2 id="login_title">LOGIN</h2>
+			<form action="/" method="post">
+				<label for="existing_login">Login:<br />
+				<input type="text" id="existing_login" class="inputfield" name="login"/></label> <br />
+				<label for="existing_password">Password:<br />
+				<input type="text" id="existing_password" class="inputfield" name="password"/></label> <br />
+				<input type="submit" value="Sigin" id="Signin_button" class="button" />
+			</form>
+		</div>
+
+
+		<div id="Signup">
+			<h2 id="registration_title">REGISTRATION</h2>
+			<form action="/registration" method="post">
+				<label for="new_login">Login:<br />
+				<input type="text" id="new_login" class="inputfield" name="login"/></label> <br /> 
+				<label for="new_password">Password:<br /> 
+				<input type="text" id="new_password" class="inputfield" name="password"/></label> <br /> 
+				<input type="submit" value="SignUp" id="Signup_button" class="button" />
+			</form>
+		</div>
+	</div>
 </body>
 </html>
