Refactored with JQuery
* Refactored with JQuery
* CheckAll bug - fixed
* Clear Completed bug - fixed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 <head>
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="css/style.css" />
+<script src="js/jquery-1.12.1.min.js"></script>
 <title>ToDo List</title>
 </head>
 
@@ -85,8 +86,8 @@
 	</div>
 
 	<script type="text/javascript" src="js/uuid.js"></script>
-	<script type="text/javascript" src="js/Tree.js"></script>
 	<script type="text/javascript" src="js/javascript.js"></script>
+	
 </body>
 
 </html>
